--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/rainlogo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -1788,9 +1788,9 @@
       }
     }
   </style>
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/son_hali.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700,600,600i&amp;display=swap">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
